--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+beautifulsoup4==4.6.0
+bs4==0.0.1
+certifi==2018.1.18
+chardet==3.0.4
 Django==2.0.1
+idna==2.6
 pkg-resources==0.0.0
 pytz==2017.3
-beautifulsoup4==4.6.0
+requests==2.18.4
+urllib3==1.22
